# c_string

./: .gitignore  CMakeLists.txt  README.md
include/: c_string.h
src/: c_string.c
